[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/portal_left.png" type="Texture" id=1]
[ext_resource path="res://Portal.gd" type="Script" id=2]
[ext_resource path="res://assets/portal_right.png" type="Texture" id=3]
[ext_resource path="res://assets/portal_key.png" type="Texture" id=4]
[ext_resource path="res://assets/wall_tile.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -16, -48, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, -16, 48, 16, 0, 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 11.9065

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="Portal" type="Node2D"]
script = ExtResource( 2 )

[node name="portal_left" type="Area2D" parent="."]
position = Vector2( -16, 0 )

[node name="portal_left_sprite" type="Sprite" parent="portal_left"]
position = Vector2( -23.9828, 0.0638627 )
scale = Vector2( 0.0962317, 0.0956879 )
texture = ExtResource( 1 )

[node name="portal_left_collision" type="CollisionShape2D" parent="portal_left"]
position = Vector2( 0, 0.0659695 )
shape = SubResource( 1 )

[node name="portal_right" type="Area2D" parent="."]
position = Vector2( 16, 0 )

[node name="portal_right_sprite" type="Sprite" parent="portal_right"]
position = Vector2( 24.2305, -0.115417 )
scale = Vector2( 0.0969222, 0.0969962 )
texture = ExtResource( 3 )

[node name="portal_right_collision" type="CollisionShape2D" parent="portal_right"]
position = Vector2( 3.12924e-07, 0 )
shape = SubResource( 2 )

[node name="portal_key" type="Area2D" parent="."]
position = Vector2( 0, -34 )
__meta__ = {
"_edit_group_": true
}

[node name="portal_key_sprite" type="Sprite" parent="portal_key"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )

[node name="portal_key_collision" type="CollisionShape2D" parent="portal_key"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="wall" type="Node2D" parent="."]

[node name="wall_tile" type="Sprite" parent="wall"]
position = Vector2( -4.76837e-07, 8 )
scale = Vector2( 2, 1 )
z_index = -1
texture = ExtResource( 5 )

[node name="wall_tile2" type="Sprite" parent="wall"]
position = Vector2( -4.76837e-07, -8 )
scale = Vector2( 2, 1 )
z_index = -1
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/StaticBody2D"]
shape = SubResource( 4 )
[connection signal="body_entered" from="portal_left" to="." method="_on_portal_left_body_entered"]
[connection signal="body_exited" from="portal_left" to="." method="_on_portal_body_exited"]
[connection signal="body_entered" from="portal_right" to="." method="_on_portal_right_body_entered"]
[connection signal="body_exited" from="portal_right" to="." method="_on_portal_body_exited"]
[connection signal="body_entered" from="portal_key" to="." method="_on_portal_key_body_entered"]
